2016-04-11
- back background permission optional permission
- update styles, colors
- tweak peer selection / disconnection logic
- make request update check when loading options page
- check for online status in some cases

2016-04-10
- add bytes/sec to peer list
- show notification when app updates
- add an action "get app" to files list
- replace calls to window.open with chrome.browser.openTab
- try to make "Open" in files tab work better, instead replace with link to issue tracker.

2016-04-09
- add onReceiveError TCP events, so now we detect when a connection is closed
  should stop torrents from hanging while downloading. A very important bugfix!
- fix reset torrent state for case where added by .torrent entry
- add _locales/en/messages.json starting i8n
- destroy the UI on minimize, restore on restore (save some memory/cpu maybe)
- update package script to reduce crx size

2016-04-08
- fix main logo for retina
- add setup magnet link option
- add option to disable usage tracking
- fix client name display
- fix help page
- add tooltips to options
- add new option "add public trackers automatically"
- fix uninstall url
- add browser permission to use browser.openTab
- update media stream page
- update file actions on file complete
- update web server
- fix drag in .torrent file
- fix display of client name
- add folder path to files list

2016-04-07
- fix display of % complete
- adding messages column
- tweaking logging to add categories
- remove minimized view (too crappy)
- show error when .torrent file wont load