@@ -119,8 +119,9 @@ The file probably has the AC3 codec, which ChromeOS does not decode. Try to get 
       <p>Then check out the "Peers" tab and make sure you're
       connecting to peers.</p>
 
-      <p>If you still have no success, please report detailed information to graehlarts@gmail.com or to the 
-        <a target="_blank" href="http://google.com/+JSTorrent">JSTorrent community page</a>
+      <p>If you still have no success, please report detailed information to graehlarts@gmail.com, or on the 
+        <a target="_blank" href="http://google.com/+JSTorrent">JSTorrent community page</a>, or to the
+        <a target="_blank" href="http://reddit.com/r/JSTorrent">JSTorrent SubReddit</a>
       </p>
     </span>
   </li>
@@ -184,7 +185,7 @@ You can skip downloading files or choose to download only a single file by right
       Something isn't working right...
     </span>
     <span class="answer">
-<p>      You can try looking on <a target="_blank" href="http://google.com/+JSTorrent">JSTorrent community page</a> on Google+</p>
+<p>      You can try looking on <a target="_blank" href="http://google.com/+JSTorrent">JSTorrent community page</a> on Google+ or the <a target="_blank" href="http://reddit.com/r/JSTorrent">JSTorrent SubReddit</a></p>
     </span>
   </li>
 
@@ -193,7 +194,8 @@ You can skip downloading files or choose to download only a single file by right
       My torrent says "error"
     </span>
     <span class="answer">
-<p>      This software isn't perfect. It could be our fault. Check the system notifications and see if there is any information. One possible cause is the <em>Download Folder</em> for this torrent is missing (if it was an external drive). Please, let me know about any errors either on the <a target="_blank" href="http://google.com/+JSTorrent">Google+ JSTorrent community page</a>, or the <a href="http://jstorrent.uservoice.com" target="_blank">Suggestions Page</a>.</p>
+      <p>      This software isn't perfect. It could be our fault. Check the system notifications and see if there is any information. One possible cause is the <em>Download Folder</em> for this torrent is missing (if it was an external drive). Please, let me know about any errors either on the <a target="_blank" href="http://google.com/+JSTorrent">Google+ JSTorrent community page</a>, the <a href="http://jstorrent.uservoice.com" target="_blank">Suggestions Page</a>, or the <a target="_blank" href="http://reddit.com/r/JSTorrent">JSTorrent SubReddit</a>
+      </p>
     </span>
   </li>
 
@@ -202,7 +204,8 @@ You can skip downloading files or choose to download only a single file by right
       I have a feature suggestion...
     </span>
     <span class="answer">
-<p>      I would love to hear about it. Please share it on the <a target="_blank" href="http://google.com/+JSTorrent">Google+ JSTorrent community page</a>. Or you can share it on our <a href="http://jstorrent.uservoice.com" target="_blank">Suggestions Page</a>.</p>
+      <p>      I would love to hear about it. Please share it on the <a target="_blank" href="http://google.com/+JSTorrent">Google+ JSTorrent community page</a>. Or you can share it on our <a href="http://jstorrent.uservoice.com" target="_blank">Suggestions Page</a>, or the <a target="_blank" href="http://reddit.com/r/JSTorrent">JSTorrent SubReddit</a>
+      </p>
     </span>
   </li>
 
@@ -235,7 +238,7 @@ You can skip downloading files or choose to download only a single file by right
     </span>
     <span class="answer">
 <p>      That's OK, You probably don't need to know what they all
-      mean. Try asking on the <a target="_blank" href="http://google.com/+JSTorrent">Google+ JSTorrent community page</a></p>
+      mean. Try asking on the <a target="_blank" href="http://google.com/+JSTorrent">Google+ JSTorrent community page</a> or the <a target="_blank" href="http://reddit.com/r/JSTorrent">JSTorrent SubReddit</a></p>
     </span>
   </li>
 
@@ -255,7 +258,7 @@ You can skip downloading files or choose to download only a single file by right
       My question isn't answered here...
     </span>
     <span class="answer">
-<p>      Ask it on the <a target="_blank" href="http://google.com/+JSTorrent">Google+ JSTorrent community page</a>!</p>
+<p>      Ask it on the <a target="_blank" href="http://google.com/+JSTorrent">Google+ JSTorrent community page</a> or the <a target="_blank" href="http://reddit.com/r/JSTorrent">JSTorrent SubReddit</a></p>
     </span>
   </li>
 
